# adios2SstTest

./: CMakeLists.txt  README.md  adios2_bp4.yaml  adios2_sst.yaml  clientSst_2233781.out  clientSst_scorecRhel7.out  envGcc1010_scorecRhel7.sh  envGcc1020.sh  installAdios2SstTest.sh  installAdios2SstTest_scorecRhel7.sh  runSetupComms.sh  runSetupComms_scorecRhel7.sh  serverSst_2233781.out  serverSst_scorecRhel7.out  setupComms.cpp
